Changelog
=========

2.0.1 (unreleased)
------------------

- Declare dependency on plone.namedfile[blobs].
  [lgraf]

- Add diff function to maintenance view to compare UIDs in portal catalog with
  UIDs in Solr.
  [buchi]

- Fix security filter: Properly quote roles/users with spaces.
  [buchi]


2.0.0 (2018-02-15)
------------------

- Complete rewrite. Not compatible with previous versions.
  [buchi]